--- a/app/src/main/res/layout/activity_item_details.xml
+++ b/app/src/main/res/layout/activity_item_details.xml
@@ -3,10 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:descendantFocusability="blocksDescendants"
     android:orientation="vertical"
     android:weightSum="1"
-    tools:context=".activities.ItemDetailsActivity">
+    tools:context=".ui.activities.ItemDetailsActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -246,22 +247,41 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dp"
+
                 android:orientation="horizontal"
                 android:weightSum="1">
 
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:orientation="vertical"
                     android:layout_weight=".9">
 
                     <TextView
+                        android:layout_marginLeft="6dp"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:gravity="center_vertical"
                         android:text="Comments"
                         android:textSize="15sp"
                         android:textStyle="bold" />
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:layout_marginLeft="6dp"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        app:boxStrokeColor="#446CCA0D"
+                        android:layout_width="match_parent"
+                        app:boxStrokeWidth="2dp"
+                        app:boxCornerRadiusBottomStart="10dp"
+                        app:boxCornerRadiusBottomEnd="10dp"
+                        app:boxCornerRadiusTopEnd="10dp"
+                        app:boxCornerRadiusTopStart="10dp"
+                        android:layout_height="wrap_content" >
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/item_details_comment_textfield"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
+                    </com.google.android.material.textfield.TextInputLayout>
                 </LinearLayout>
 
                 <LinearLayout
@@ -269,6 +289,8 @@
                     android:layout_height="wrap_content">
 
                     <Button
+                        android:layout_marginTop="25dp"
+                        android:layout_marginStart="10dp"
                         android:id="@+id/item_details_add_comment"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
