--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/gradient_background"
     android:orientation="vertical"
-    tools:context=".activities.CategoryDetailsActivity">
+    tools:context=".ui.activities.CategoryDetailsActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
