--- a/app/src/main/res/layout/botton_nav_and_screen.xml
+++ b/app/src/main/res/layout/botton_nav_and_screen.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/container"
-    android:layout_above="@id/bottomMenu"
+    android:layout_above="@id/footer"
     android:layout_below="@id/header"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-
-
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/view_pager"
