Corrected user profile bugs, latest items refresh added. Some UI tweaks. Starting of Item Update and delete

--- a/app/src/main/res/layout/botton_nav_and_screen.xml
+++ b/app/src/main/res/layout/botton_nav_and_screen.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/container"
-    android:layout_above="@id/footer"
-    android:layout_below="@id/header"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_above="@id/footer"
+    android:layout_below="@id/header">
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
 
 </FrameLayout>
